@@ -1,6 +1,7 @@
 19.02.2022
 Version: 0.0.1f
 - Small changes
+- Add project on GitHub (https://github.com/A1ekseyN/2Walks)
 
 
 18.02.2022
